# jack-dspd

./: .gitignore  .gitmodules  CMakeLists.txt  package-lock.json  package.json
modules/folder/: CMakeLists.txt
modules/helloworld/: CMakeLists.txt
modules/kellet/: CMakeLists.txt  kellet~.c
modules/klp24/: CMakeLists.txt
modules/overdrive/: CMakeLists.txt  OverdriveWrapper.h  overdrive~.c
modules/phasesin/: CMakeLists.txt  phasesin~.c
modules/reverbsc/: CMakeLists.txt  ReverbscWrapper.h  reverbsc~.c
modules/saw/: CMakeLists.txt
modules/sawblep/: CMakeLists.txt  sawblep~.c
modules/square/: CMakeLists.txt  square~.c
modules/squareblep/: CMakeLists.txt
modules/xfade/: CMakeLists.txt
src/: folder~.c  helloworld.c  kellet~.c  klp24~.c  sawblep~.c  saw~.c  squareblep~.c  square~.c  wtfosc~.c  xfade~.c
